# console-rs

./: .editorconfig  Cargo.toml  README.md
examples/: fake_console.rs  system_console.rs
src/: buffer.rs  error.rs  lib.rs  windows.rs
src/console/: buffer.rs  mod.rs
